
[package]
name = "staking"
version = "0.0.1"
description = ""
authors = ["Dromedary Camel"]
repository = ""
license = ""
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "1.7.9"
spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
metaplex-token-metadata = {version = "0.0.1", features = ["no-entrypoint"]}

[dev-dependencies]
solana-program-test = "1.8.0"
solana-sdk = "1.7.9"

[lib]
name = "staking"
crate-type = ["cdylib", "lib"]
